--- a/style.css
+++ b/style.css
@@ -19,6 +19,18 @@ html {
   margin-left: -15px;
 }
 
+.col-xs-2 {
+  width: 16.666%;
+}
+
+.col-xs-offest-2 {
+  width: 16.666%;
+}
+
+.col-xs-4 {
+  width: 33.3333%;
+}
+
 body {
 
 }
@@ -26,11 +38,8 @@ body {
 /* Header */
 
 .header {
-  width: 100%;
-  height: 150px;
-  background-color: rgb(35, 2, 63);
-  border-bottom: 1px solid #a9a9a9;
-  z-index: 1;
+padding: 2.75rem 0;
+background-color: rgb(35, 2, 63);
 }
 
 .header h1 {
@@ -39,6 +48,21 @@ body {
   font-family: 'Righteous', cursive;
   font-size: 2.5rem;
   color: rgb(255, 0, 171);
+}
+
+.header input {
+  padding: .5rem;
+  text-align: center;
+  border-radius: 19px;
+  margin-right: .7rem;
+}
+
+.header .fa-search {
+  padding: .5rem;
+  border-radius: 19px;
+  text-align: center;
+  background-color: #ff00ab;
+  color: #22013f;
 }
 
 .info {
